/*
 * this is a sample protobuf definition
 */

 syntax = "proto3";

 import "common.proto";

 option java_multiple_files = true;
 option java_package = "com.dstsytems.examples.helloworld";
 option java_outer_classname = "HelloWorldProto";

 package main;

 // The greeting service definition.
 service Greeter {
   // Sends a greeting
   rpc SayHello (HelloRequest) returns (HelloReply) {}
 }

 // The request message containing the user's name.
 message HelloRequest {
  CommonRequest common = 1;
  string name = 10;
 }

 // The response message containing the greetings
 message HelloReply {
  CommonResponse common = 1;
  string message = 10;
 }
